src/test/resources/amyc/typer/failing/MatchError2.amy
object MatchError
  val x: Int(32) = 1 match { case 2 => "" }; x
end MatchError
